scalaplugin/src/test/resource/acyclic/src/test/resources/success/cyclicunmarked/A.scala
package success.cyclicunmarked

class A {
  val b: B = null
}
