scalaplugin/src/test/resource/acyclic/src/test/resources/fail/cyclicgraph/B.scala
package fail.cyclicgraph
import acyclic.file

class B {
  val a: A = null
}
